Fixed bug, when scrollbar appears at the bottom of the expenses after resizing the window

--- a/style/less/expenses/expenses.less
+++ b/style/less/expenses/expenses.less
@@ -8,6 +8,7 @@
 }
 
 #expenses-list {
+    margin: 0;
     .expense-item {
         .clearfix();
         min-height: 9em;
